--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ Reasoning Capabilities <br>in Spoken Dialogue Systems</h1>
               </span> -->
               <!-- Code Link. -->
               <span class="link-block">
-                <a href=""
+                <a href="https://github.com/Berkeley-Speech-Group/emo-reasoning"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
@@ -189,7 +189,7 @@ Speech emotions play a crucial role in human-computer interaction, shaping engag
          href="">
         <i class="fas fa-file-pdf"></i>
       </a>
-      <a class="icon-link" href="" class="external-link" disabled>
+      <a class="icon-link" href="https://github.com/Berkeley-Speech-Group/emo-reasoning" class="external-link" disabled>
         <i class="fab fa-github"></i>
       </a>
     </div>
